[package]
name = "ud-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ashishbinu/ud-cli"
homepage = "https://github.com/ashishbinu/ud-cli"
categories = ["command-line-utilities"]
description = "An urban dictionary cli."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.4.0"
scraper = "0.12.0"
