[package]
name = "ud-cli"
version = "0.1.0"
authors = ["Ashish Binu <ashishbinu90@gmail.com>"]
edition = "2021"
repository = "https://github.com/ashishbinu/ud-cli"
homepage = "https://github.com/ashishbinu/ud-cli"
categories = ["command-line-utilities"]
description = "An urban dictionary cli."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.4.0"
scraper = "0.12.0"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary
