[package]
name = "rud"
version = "0.1.0"
authors = ["Ashish Binu <ashishbinu90@gmail.com>"]
edition = "2021"
repository = "https://github.com/ashishbinu/rud"
homepage = "https://github.com/ashishbinu/rud"
categories = ["command-line-utilities"]
description = "An urban dictionary cli."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.4.0"
clap = { version = "4.3.16", features = ["derive"] }
anyhow = "1.0.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary
